opam-version : "2.0"
name         : "Utilities"
version      : "1.0"
synopsis     : "Utilities for OCaml"
authors      : ["Christian Rinderknecht"]
maintainer   : "rinderknecht@free.fr"
homepage     : "https://github.com/rinderknecht/Utilities"
bug-reports  : "https://github.com/rinderknecht/Utilities/issues"
dev-repo     : "git+https://github.com/rinderknecht/Utilities.git"
license      : "MIT"
# If you change the dependencies, run `opam lock` in the root
depends      : ["dune"
                "SourceLoc" {>= "1.0"}]
build        : [["dune" "build" "-p" name]]
pin-depends  : [["SourceLoc"
                 "git+https://github.com/rinderknecht/SourceLoc.git"]]

url {
  src: "https://github.com/rinderknecht/Utilities/-/archive/master/Utilities.tar.gz"
}
